--- a/src/modules/Card.css
+++ b/src/modules/Card.css
@@ -2,10 +2,10 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 
 .card{
-    font-family: 'Roboto', sans-serif;
     border-radius: 0.74vw;
     box-shadow: 0px 0.37vw 1.48vw #1818189a;
     margin: 1.48vw;
@@ -18,12 +18,47 @@
     padding: 0.74vw;
 }
 
+.pokeName{
+    color: #212121;
+    font-size: 36px;
+    margin: 18px 0 0 0;
+    text-transform: uppercase;
+}
 
-.statList , .typeList, .spriteList, .moveList{
+.listTitle{
+    color: #212121;
+    font-size: 20px;
+    font-weight: bold;
+    margin: 25px;
+    text-transform: uppercase;
+}
+
+.lists{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    text-align: center;
+    justify-content: space-around;
+}
+
+.statList , .typeList, .spriteList, .moveList, .AppearanceList, .abilityList{
     list-style: none;
+    text-align: center;
+    text-transform: uppercase;
+    background-color: #30a7d7;
+    color: #fff;
+    border-radius: 10px;
+    padding: 5px;
+    margin: 10px;
+    box-shadow: 0 0 10px black;
+}
+
+.statList{
+    text-align: left;
 }
 
 .spriteList{
+    color: #212121;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     background-color: rgba(0, 0, 0, 0.116);
@@ -50,4 +85,20 @@
     width: 100px;
     border-radius: 50%;
     border: solid black;
+}
+
+@media (max-width: 320px) 
+{
+    .spriteList{
+        
+        grid-template-columns: 1fr;
+    }
+}
+
+@media (max-width: 600px) 
+{
+    .spriteList{
+        
+        grid-template-columns: 1fr 1fr;
+    }
 }
