--- a/src/modules/Card.css
+++ b/src/modules/Card.css
@@ -53,6 +53,20 @@
     box-shadow: 0 0 10px black;
 }
 
+.moveList , .AppearanceList{
+    max-height: 200px;
+    overflow: hidden; 
+    overflow-y: auto;
+}
+
+.AppearanceList li{
+    color: white;
+    text-shadow: rgb(49, 49, 49) 2px 0px 0px, rgb(49, 49, 49) 1.75517px 0.958851px 0px, rgb(49, 49, 49) 1.0806px 1.68294px 0px, rgb(49, 49, 49) 0.141474px 1.99499px 0px, rgb(49, 49, 49) -0.832294px 1.81859px 0px, rgb(49, 49, 49) -1.60229px 1.19694px 0px, rgb(49, 49, 49) -1.97998px 0.28224px 0px, rgb(49, 49, 49) -1.87291px -0.701566px 0px, rgb(49, 49, 49) -1.30729px -1.5136px 0px, rgb(49, 49, 49) -0.421592px -1.95506px 0px, rgb(49, 49, 49) 0.567324px -1.91785px 0px, rgb(49, 49, 49) 1.41734px -1.41108px 0px, rgb(49, 49, 49) 1.92034px -0.558831px 0px;
+    padding: 5px;
+    margin-top: 5px;
+    border-radius: 5px;
+}
+
 .typeList{
     box-shadow: none;
     background-color: transparent;
