added 'not found message' when response is 404

--- a/src/modules/Card.css
+++ b/src/modules/Card.css
@@ -54,7 +54,7 @@
 }
 
 .moveList , .AppearanceList{
-    max-height: 200px;
+    max-height: 30vh;
     overflow: hidden; 
     overflow-y: auto;
 }
